--- a/aboutus.html
+++ b/aboutus.html
@@ -85,27 +85,50 @@
 
 </section>
 
-  <div class="footer-container">
-    <div class="footer">
-      <div class="footer-heading footer-1">
-        <h2>Contact Us For Further Questions</h2>
-        <a href="Contact.html">Email</a>
-        <a href="Contact.html">Phone</a>
-        <a href="Contact.html">Comments</a>
-      </div>
-      <div class="footer-heading footer-2">
-        <h2>Follow Our Social Medias!</h2>
-        <a href="https://www.instagram.com/laurraaag/">Instagram</a>
-        <a href="https://twitter.com/explore">Twitter</a>
-        <a href="https://www.facebook.com/">Facebook</a>
-        <a href="https://www.linkedin.com/login">LinkedIn</a>
-      </div>
-      <div class="footer-email-form">
-        <h2>Join Our Newsletter</h2>
-        <input type="email" id="email" placeholder="Enter Email address" id="footer-email">
-        <input type="submit" value="Sign Up" id="footer-email-btn">
-      </div>
+<footer class="footer-responsive">
+  <section class="footer-left">
+    <figure class="brand-title">
+      <a href="J-index.html">
+        <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+    </figure>
+    <p class="footer-links">
+      <a href="homepage.html">Home</a>
+      |
+      <a href=“aboutus.html">About Us</a>
+      |
+      <a href=“API.html">Assistance</a>
+      |
+      <a href=“contact.html">Contact </a>
+      |
+    </p>
+    <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
+  </section>
+  <section class="footer-center">
+    <div>
+      <img class="address" src="pics/address.png" alt="logo">
+      <p><span>1234 Help St. Charlotte, NC 28123</span></p>
     </div>
+    <div>
+      <img class="phone" src="pics/phone.png" alt="logo">
+      <p>(704) 123-4567</p>
+    </div>
+    <div>
+      <img class="email" src="pics/mail.png" alt="logo">
+      <p><span>help@apilh.org</span></p>
+    </div>
+  </section>
+  <section class="footer-right">
+    <div class="footer-icons">
+      <a href="https://www.instagram.com">
+        <img class="ig" src="pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
+      <a href="https://www.twitter.com">
+        <img class="tw" src="pics/twitter.png"twitter" style="height:2rem; width:2rem; " /></a>
+      <a href="https://www.facebook.com">
+        <img class="fb" src="pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
+    </div>
+  </section>
+  </div>
+</footer>
 </body>
 
 </html>
