--- a/aboutus.html
+++ b/aboutus.html
@@ -13,11 +13,11 @@
 <body>
   <header>
     <div>
-      <img id="logo" src="pics/logo.png" alt="logo">
+      <img id="logo" src="public/pics/logo.png" alt="logo">
     </div>
     <nav class="nav-bar">
       <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="API.html">Assistance</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -88,7 +88,7 @@
 <footer class="footer-responsive">
   <section class="footer-left">
     <figure class="brand-title">
-        <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+        <img src="public/pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
     </figure>
     <p class="footer-links">
       <a href="homepage.html">Home</a>
@@ -104,26 +104,26 @@
   </section>
   <section class="footer-center">
     <div>
-      <img class="address" src="pics/address.png" alt="logo">
+      <img class="address" src="public/pics/address.png" alt="logo">
       <p><span>1234 Help St. Charlotte, NC 28123</span></p>
     </div>
     <div>
-      <img class="phone" src="pics/phone.png" alt="logo">
+      <img class="phone" src="public/pics/phone.png" alt="logo">
       <p>(704) 123-4567</p>
     </div>
     <div>
-      <img class="email" src="pics/mail.png" alt="logo">
+      <img class="email" src="public/pics/mail.png" alt="logo">
       <p><span>help@apilh.org</span></p>
     </div>
   </section>
   <section class="footer-right">
     <div class="footer-icons">
       <a href="https://www.instagram.com">
-        <img class="ig" src="pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
+        <img class="ig" src="public/pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
       <a href="https://www.twitter.com">
-        <img class="tw" src="pics/twitter.png"twitter" style="height:2rem; width:2rem; " /></a>
+        <img class="tw" src="public/pics/twitter.png"twitter" style="height:2rem; width:2rem; " /></a>
       <a href="https://www.facebook.com">
-        <img class="fb" src="pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
+        <img class="fb" src="public/pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
     </div>
   </section>
   </div>
