--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="aboutus.css">
+  <link rel="stylesheet" href="/aboutus.css">
 
   <title>About US</title>
 </head>
@@ -13,121 +13,121 @@
 <body>
   <header>
     <div>
-      <img id="logo" src="public/pics/logo.png" alt="logo">
+      <img id="logo" src="pics/logo.png" alt="logo">
     </div>
     <nav class="nav-bar">
       <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="aboutus.html">About us</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/aboutus">About us</a></li>
         <li><a href="API.html">Assistance</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
   <div class="hero-image">
     <div class="hero-text">
       <h1>About Us</h1>
-  
+
     </div>
   </div>
- 
+
   <section class="container">
     <div class="items item1">
-      <h1>Is it free?</h1> 
-      <p>Yes! The API Let's Help team, is dedicated to bringing these services and 
+      <h1>Is it free?</h1>
+      <p>Yes! The API Let's Help team, is dedicated to bringing these services and
         information for free!</p>
     </div>
     <div class="items item2">
-      <h1>Who are we?</h1> 
+      <h1>Who are we?</h1>
       <p>Here at API Let's Help, we are dedicated to helping parents
-         find a school that suits their child the best!</p>
+        find a school that suits their child the best!</p>
     </div>
     <div class="items item3">
-      <h1>Why Us?</h1> 
+      <h1>Why Us?</h1>
       <p>API Let's help came to life because we understand the
-         struggles of trying to find the perfect school your children would enjoy.</p>
-      </div>
+        struggles of trying to find the perfect school your children would enjoy.</p>
+    </div>
 
-      </section>
+  </section>
 
-      <h1 class="ourteam">Our Team</h1>
+  <h1 class="ourteam">Our Team</h1>
 
-    <section class="containeragain" style="justify-content: center;">
+  <section class="containeragain" style="justify-content: center;">
 
     <div class="one item">
-      <img alt="male silhouette" src="pics/FF0D71AF-E9A2-4474-B5D1-D4C60266666B_1_201_a.jpeg" width="100%">
+      <img alt="male silhouette" src="pics/male.jpeg" width="100%">
       <span class="A">A</span>lejandro Martinez
 
     </div>
 
-  <div class="two item">
-      <img alt="female silhouette" src="pics/913CD5A5-5943-4BFC-B4FF-77B13065C744_1_201_a.jpeg" width="100%">
+    <div class="two item">
+      <img alt="female silhouette" src="pics/female.jpeg" width="100%">
       (<span class="P">P</span>j) Pagines Her
-  </div>
-
-  <div class="three item">
-    <img alt="male silhouette" src="pics/FF0D71AF-E9A2-4474-B5D1-D4C60266666B_1_201_a.jpeg" width="100%">
-    <span class="I">I</span>saiah Foster
-</div>
-</section>
-
-<section class="containeragain2" style="justify-content: center;">
-
-<div class="four item">
-  <img alt="female silhouette" src="pics/913CD5A5-5943-4BFC-B4FF-77B13065C744_1_201_a.jpeg" width="100%">
-  <span class="L">L</span>aura Gonzalez
-</div>
-
-<div class="five item">
-  <img alt="female silhouette" src="pics/913CD5A5-5943-4BFC-B4FF-77B13065C744_1_201_a.jpeg" width="100%">
-  <span class="H">H</span>dit Eban
-</div>
-
-</section>
-
-<footer class="footer-responsive">
-  <section class="footer-left">
-    <figure class="brand-title">
-        <img src="public/pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
-    </figure>
-    <p class="footer-links">
-      <a href="homepage.html">Home</a>
-      |
-      <a href=“aboutus.html">About Us</a>
-      |
-      <a href=“API.html">Assistance</a>
-      |
-      <a href=“contact.html">Contact </a>
-      |
-    </p>
-    <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
-  </section>
-  <section class="footer-center">
-    <div>
-      <img class="address" src="public/pics/address.png" alt="logo">
-      <p><span>1234 Help St. Charlotte, NC 28123</span></p>
     </div>
-    <div>
-      <img class="phone" src="public/pics/phone.png" alt="logo">
-      <p>(704) 123-4567</p>
-    </div>
-    <div>
-      <img class="email" src="public/pics/mail.png" alt="logo">
-      <p><span>help@apilh.org</span></p>
+
+    <div class="three item">
+      <img alt="male silhouette" src="pics/male.jpeg" width="100%">
+      <span class="I">I</span>saiah Foster
     </div>
   </section>
-  <section class="footer-right">
-    <div class="footer-icons">
-      <a href="https://www.instagram.com">
-        <img class="ig" src="public/pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
-      <a href="https://www.twitter.com">
-        <img class="tw" src="public/pics/twitter.png"twitter" style="height:2rem; width:2rem; " /></a>
-      <a href="https://www.facebook.com">
-        <img class="fb" src="public/pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
+
+  <section class="containeragain2" style="justify-content: center;">
+
+    <div class="four item">
+      <img alt="female silhouette" src="pics/female.jpeg" width="100%">
+      <span class="L">L</span>aura Gonzalez
     </div>
+
+    <div class="five item">
+      <img alt="female silhouette" src="pics/female.jpeg" width="100%">
+      <span class="H">H</span>dit Eban
+    </div>
+
   </section>
-  </div>
-</footer>
+
+  <footer class="footer-responsive">
+    <section class="footer-left">
+      <figure class="brand-title">
+        <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+      </figure>
+      <p class="footer-links">
+        <a href="/">Home</a>
+        |
+        <a href=“/aboutus">About Us</a>
+        |
+        <a href=“/assistance">Assistance</a>
+        |
+        <a href=“/contact">Contact </a>
+        |
+      </p>
+      <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
+    </section>
+    <section class="footer-center">
+      <div>
+        <img class="address" src="pics/address.png" alt="logo">
+        <p><span>1234 Help St. Charlotte, NC 28123</span></p>
+      </div>
+      <div>
+        <img class="phone" src="pics/phone.png" alt="logo">
+        <p>(704) 123-4567</p>
+      </div>
+      <div>
+        <img class="email" src="pics/mail.png" alt="logo">
+        <p><span>help@apilh.org</span></p>
+      </div>
+    </section>
+    <section class="footer-right">
+      <div class="footer-icons">
+        <a href="https://www.instagram.com">
+          <img class="ig" src="pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
+        <a href="https://www.twitter.com">
+          <img class="tw" src="pics/twitter.png" twitter" style="height:2rem; width:2rem; " /></a>
+        <a href="https://www.facebook.com">
+          <img class="fb" src="pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
+      </div>
+    </section>
+    </div>
+  </footer>
 </body>
 
 </html>
