--- a/home.html
+++ b/home.html
@@ -5,29 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/home.css">
     <title>HopeHack</title>
 </head>
 
 <body>
     <header>
         <div>
-            <a href="homepage.html"><img id="logo" src="public/pics/logo.png" alt="logo"></a>
+            <a href="/"><img id="logo" src="pics/logo.png" alt="logo"></a>
         </div>
         <nav class="nav-bar">
             <ul>
-
-                <li><a href="/home">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/aboutus">About us</a></li>
-                <li><a href="API.html">Assistance</a></li>
+                <li><a href="/assistance">Assistance</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <img class="hero" src="public/pics/schoolbus.png" alt="schoolbus">
+        <img class="hero" src="pics/schoolbus.png" alt="schoolbus">
         <h1>Find the<span id="red"> perfect</span> school... <br> <span id="red2">near you.</span></h1>
-        <button class="buttons">Get Started</button>
+        <button class="buttons"><a href="/assistance">Get Started</a></button>
         <blockquote>"We may not be able to prepare the future for our children, but we can at least prepare our children
             for the future." — Franklin D. Roosevelt
         </blockquote>
@@ -42,43 +41,42 @@
     <footer class="footer-responsive">
         <section class="footer-left">
             <figure class="brand-title">
-                <img src="public/pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+                <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
             </figure>
             <p class="footer-links">
-                <a href="homepage.html">Home</a>
+                <a href="/">Home</a>
                 |
-                <a href=“aboutus.html">About Us</a>
+                <a href=“/aboutus">About Us</a>
                 |
-                <a href=“API.html">Assistance</a>
+                <a href=“/assistance">Assistance</a>
                 |
-                <a href=“contact.html">Contact </a>
+                <a href=“/contact">Contact </a>
                 |
             </p>
             <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
         </section>
         <section class="footer-center">
             <div>
-                <img class="address" src="public/pics/address.png" alt="logo">
+                <img class="address" src="pics/address.png" alt="logo">
                 <p><span>1234 Help St. Charlotte, NC 28123</span></p>
             </div>
             <div>
-                <img class="phone" src="public/pics/phone.png" alt="logo">
+                <img class="phone" src="pics/phone.png" alt="logo">
                 <p>(704) 123-4567</p>
             </div>
             <div>
-                <img class="email" src="public/pics/mail.png" alt="logo">
+                <img class="email" src="pics/mail.png" alt="logo">
                 <p><span>help@apilh.org</span></p>
             </div>
         </section>
         <section class="footer-right">
             <div class="footer-icons">
                 <a href="https://www.instagram.com">
-                    <img class="ig" src="public/pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
+                    <img class="ig" src="pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
                 <a href="https://www.twitter.com">
-                    <img class="tw" src="public/pics/twitter.png" twitter" style="height:2rem; width:2rem; " /></a>
+                    <img class="tw" src="pics/twitter.png" twitter" style="height:2rem; width:2rem; " /></a>
                 <a href="https://www.facebook.com">
-                    <img class="fb" src="public/pics/facebook.png" alt="facebook"
-                        style="height:2rem; width:2rem " /></a>
+                    <img class="fb" src="pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
             </div>
         </section>
         </div>
