updated all files

--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
     </div>
     <nav class="nav-bar">
       <ul>
-        <li><a href="homepage.html">Home</a></li>
-        <li><a href="aboutus.html">About us </a></li>
-        <li><a href="API.html">Assistance</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/aboutus">About us</a></li>
+        <li><a href="/assistance">Assistance</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -36,26 +36,26 @@
   </div>
 
 
-<div class="container">
-  <h2>Contact Us</h2>
-  <form action="/contact" method="post">
-    <label for="name">Name:</label>
-    <input type="text" name="name" id="fullName" place holder="Your name" required>
+  <div class="container">
+    <h2>Contact Us</h2>
+    <form action="/contact" method="post">
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="fullName" place holder="Your name" required>
 
 
-    <label for="email">Email:</label>
-    <input type="text" name="email" id="email" place holder="Your email" required>
+      <label for="email">Email:</label>
+      <input type="text" name="email" id="email" place holder="Your email" required>
 
 
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" place holder="Your message" rows="6"></textarea>
- 
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" place holder="Your message" rows="6"></textarea>
 
-    <div class="center">
-      <button id="submitBtn" type="submit">SEND</button>
-</div>
 
-  </form>
+      <div class="center">
+        <button id="submitBtn" type="submit">SEND</button>
+      </div>
+
+    </form>
 
 
 
@@ -66,18 +66,17 @@
   <footer class="footer-responsive">
     <section class="footer-left">
       <figure class="brand-title">
-     
-          <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+
+        <img src="pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
       </figure>
       <p class="footer-links">
-        <a href="homepage.html">Home</a>
+        <a href="/">Home</a>
         |
-        <a href=“aboutus.html">About Us</a>
+        <a href="/aboutus">About us</a>
         |
-        <a href=“API.html">Assistance</a>
-
+        <a href="/assistance">Assistance</a>
         |
-        <a href=“contact.html">Contact </a>
+        <a href="/contact">Contact</a>
         |
       </p>
       <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
