--- a/home.html
+++ b/home.html
@@ -46,11 +46,11 @@
             <p class="footer-links">
                 <a href="/">Home</a>
                 |
-                <a href=“/aboutus">About Us</a>
+                <a href="/aboutus">About us</a>
                 |
-                <a href=“/assistance">Assistance</a>
+                <a href="/assistance">Assistance</a>
                 |
-                <a href=“/contact">Contact </a>
+                <a href="/contact">Contact</a>
                 |
             </p>
             <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
