--- a/API.html
+++ b/API.html
@@ -8,6 +8,21 @@
     <title>Hacks Practice</title>
 </head>
 <body>
+
+    <header>
+        <div>
+            <a href=“/”><img id=“logo” src=“pics/logo.png” alt=“logo”></a>
+        </div>
+        <nav class=“nav-bar”>
+            <ul>
+                <li><a href=“/”>Home</a></li>
+                <li><a href=“/aboutus”>About us</a></li>
+                <li><a href=“/assistance”>Assistance</a></li>
+                <li><a href=“/contact”>Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>Find The Top Rated Schools In Your Area</h1>
         <div>
@@ -16,5 +31,50 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
     <script src="main.js"></script>
+
+
+    <footer class="footer-responsive">
+        <section class="footer-left">
+          <figure class="brand-title">
+              <img src="public/pics/logo.png" alt="logo" style="width:90px;height:90px;margin:0px;"> </a>
+          </figure>
+          <p class="footer-links">
+            <a href="homepage.html">Home</a>
+            |
+            <a href=“aboutus.html">About Us</a>
+            |
+            <a href=“API.html">Assistance</a>
+            |
+            <a href=“contact.html">Contact </a>
+            |
+          </p>
+          <p class="footer-company-name">Copyright © 2022 All rights Reserved - </p>
+        </section>
+        <section class="footer-center">
+          <div>
+            <img class="address" src="public/pics/address.png" alt="logo">
+            <p><span>1234 Help St. Charlotte, NC 28123</span></p>
+          </div>
+          <div>
+            <img class="phone" src="public/pics/phone.png" alt="logo">
+            <p>(704) 123-4567</p>
+          </div>
+          <div>
+            <img class="email" src="public/pics/mail.png" alt="logo">
+            <p><span>help@apilh.org</span></p>
+          </div>
+        </section>
+        <section class="footer-right">
+          <div class="footer-icons">
+            <a href="https://www.instagram.com">
+              <img class="ig" src="public/pics/insta.png" alt="instagram" style="height:2rem; width:2rem; " /></a>
+            <a href="https://www.twitter.com">
+              <img class="tw" src="public/pics/twitter.png"twitter" style="height:2rem; width:2rem; " /></a>
+            <a href="https://www.facebook.com">
+              <img class="fb" src="public/pics/facebook.png" alt="facebook" style="height:2rem; width:2rem " /></a>
+          </div>
+        </section>
+        </div>
+      </footer>
 </body>
 </html>
