--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,8 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus">About us</a></li>
-        <li><a href="API.html">Assistance</a></li>
+        <li><a href="/assistance">Assistance</a></li>
+        <li><a href="/statistic">Statictics</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
@@ -96,6 +97,8 @@
         <a href="/aboutus">About us</a>
         |
         <a href="/assistance">Assistance</a>
+        |
+        <a href=“/statistics”>Statistics</a>
         |
         <a href="/contact">Contact</a>
         |
