--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus">About us</a></li>
         <li><a href="/assistance">Assistance</a></li>
+        <li><a href="/statistic">Statictics</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
@@ -75,6 +76,8 @@
         <a href="/aboutus">About us</a>
         |
         <a href="/assistance">Assistance</a>
+        |
+        <a href=“/statistics”>Statistics</a>
         |
         <a href="/contact">Contact</a>
         |
