--- a/API.html
+++ b/API.html
@@ -20,20 +20,19 @@
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus">About us</a></li>
         <li><a href="/assistance">Assistance</a></li>
-        <li><a href="/statistic">Statictics</a></li>
+        <li><a href="/statistic">Statistics</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
-
-  <div class="container1">
-    <h1>Find The Top Rated Schools In Your Area</h1>
-    <div>
-      <canvas id="canvas"></canvas>
+  <section class="wrapper">
+    <div class="container1">
+      <h1>Find The Top Rated Schools In Your Area</h1>
+      <div>
+        <canvas id="canvas"></canvas>
+      </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-  <script src="main.js"></script>
+  </section>
 
 
   <footer class="footer-responsive">
@@ -81,6 +80,8 @@
     </section>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
