--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/aboutus">About us</a></li>
         <li><a href="/assistance">Assistance</a></li>
-        <li><a href="/statistic">Statictics</a></li>
+        <li><a href="/statistic">Statistics</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
