--- a/API.html
+++ b/API.html
@@ -81,7 +81,7 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-  <script src="/public/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
